--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri|Martel|Sansita" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <!--
@@ -17,21 +19,7 @@
 </head>
 
 <body>
-
-  <header>
-    <h1>Products Grid</h1>
-
-    <p>Here you're sure to find a bargain on some of the finest ascii available to purchase. Be sure to peruse our
-      selection of ascii faces in an exciting range of sizes and prices.</p>
-
-    <p>But first, a word from our sponsors:</p>
-    <script>document.write('<img class="ad" src="/ads/?r=' + Math.floor(Math.random() * 1000) + '"/>');</script>
-  </header>
-
-  <section class="products">
-    ... products go here ...
     <div id="root"></div>
-  </section>
   <script src='bundle.js'></script>
 </body>
 
